--- a/simpleweb.html
+++ b/simpleweb.html
@@ -12,11 +12,24 @@
 <header>
 <h1>Dasmoto's Arts & Crafts</h1>
 </header>
-<main>
+<article>
     <section>
-        <h2>Brushes</h2>
+        <h2 class="brushes" >Brushes</h2>
+        <img src="images/hacksaw.jpeg"/>
+        <h3>Hacksaw Brushes</h3>
+        <p>Made of the highest quality oak, Hacksaw brushes are known for their weight 
+            and ability to hold paint in large amounts. Available in different sizes. <strong>Starting at $3.00 / brush.</strong>
+        </p>
     </section>
-</main>
+    <section>
+        <h2 class="frames">Frames</h2>
+        <img src="images/frames.jpeg"/>
+    </section>
+    <section>
+        <h2 class="paint">Paint</h2>
+        <img src="images/finnish.jpeg"/>
+    </section>
+</article>
 
 
 </body>
