--- a/simpleweb.html
+++ b/simpleweb.html
@@ -24,10 +24,18 @@
     <section>
         <h2 class="frames">Frames</h2>
         <img src="images/frames.jpeg"/>
+        <h3>Art Frames (assorted)</h3>
+        <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. 
+            <strong>Starting at $2.00 / frame.</strong>
+        </p>
     </section>
     <section>
         <h2 class="paint">Paint</h2>
         <img src="images/finnish.jpeg"/>
+        <h3>Clean Finnish Paint</h3>
+        <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. 
+            <strong>Starting at $5.00 / tube.</strong>
+        </p>
     </section>
 </article>
 
